# datakult

./: .dockerignore  .gitignore  .gitmessage  CHANGELOG.md  CLAUDE.md  Dockerfile  Pipfile  Procfile.tailwind  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
datakult_project/: settings.py  urls.py  wsgi.py
docker/: .env.example  docker-compose.local.yml  docker-compose.prod.yml
pages/: tests.py  views.py
reviews/: forms.py  models.py
reviews/migrations/: 0002_auto_20200815_0816.py  0003_auto_20200815_0818.py  0004_auto_20200815_0819.py
scripts/: bootstrap.sh  daily_backup.sh  entrypoint.sh  setup_dev.sh
src/: conftest.py  manage.py
src-ui/: .gitignore  README.md  angular.json  eslint.config.mjs  package.json
src-ui/src/: index.html
src-ui/src/app/: app.spec.ts  app.ts
src/accounts/: forms.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/tests/: conftest.py  test_forms.py  test_views.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/: admin.py  context_processors.py  filters.py  forms.py  htmx_validation.py  models.py  queries.py  serializers.py  urls.py  utils.py  views.py
src/core/fixtures/: sample_data.json
src/core/management/commands/: auto_backup.py  export_backup.py  import_backup.py  regenerate_reviews.py
src/core/migrations/: 0001_initial.py  0002_alter_media_contributor.py  0003_media_review_media_review_date_media_score_and_more.py  0004_remove_media_contributor_media_contributors.py  0005_alter_media_contributors.py  0005_media_cover_alter_media_score.py  0006_alter_agent_created_at_alter_media_created_at.py  0007_alter_media_score.py  0008_media_review_rendered_alter_media_review.py  0009_media_external_uri_alter_media_review_date.py  0010_agent_updated_at_media_updated_at_savedview.py  0011_tag_alter_agent_options_alter_agent_name_media_tags.py
src/core/services/: googlebooks.py  igdb.py  musicbrainz.py  openlibrary.py  tmdb.py
src/core/templates/widgets/: cover_input.html  star_rating.html
src/core/templatetags/: media_tags.py
src/core/tests/: __init__.py  conftest.py  test_forms.py  test_models.py  test_views.py
src/datakult/: asgi.py  settings.py  urls.py  wsgi.py
src/datakult_project/: asgi.py  settings.py  urls.py  wsgi.py
src/locale/fr/LC_MESSAGES/: django.po
src/static/: manifest.json
src/static/css/: easymde.css
src/static/js/: base.js  contributors.js  media_edit.js  service-worker.js
src/templates/: agent.html  backup_manage.html  base.html  base_auth.html  home.html  media.html  media_detail.html  media_edit.html
src/templates/accounts/: profile_edit.html
src/templates/base/: backup_manage.html  base.html  media_detail.html  media_edit.html  media_import.html  media_index.html
src/templates/partials/: confirm-modal.html  contributor-chip.html  field_label.html  filters-drawer.html  filters.html  load-more-trigger.html  media-contributors.html  media-cover.html  media-edit-button.html  media-icon.html  media-items-page.html  media-items.html  media-list.html  media-review-clamped.html  media-review-full.html  media-score-badge.html  media-score-stars-inner.html  media-score-stars.html  review-date-editable.html  review-editable.html  score-edit.html  score-editable.html  score-readonly.html  score.html  sidebar-nav.html  spinner.html  status-editable.html  view-mode-toggle.html
src/templates/partials/book/: book_suggestions.html
src/templates/partials/common/: back_button.html  confirm_modal.html  load_more_trigger.html
src/templates/partials/contributors/: contributor_chip.html  contributors_suggestions.html
src/templates/partials/filters/: filter_badge.html
src/templates/partials/igdb/: igdb_suggestions.html
src/templates/partials/media_items/: media_contributors.html  media_cover.html  media_edit_button.html  media_icon.html  media_item.html  media_list.html  media_list_page.html  media_review_full.html  media_status_badge.html  media_tags.html
src/templates/partials/media_items/score/: media_score_badge.html  media_score_stars.html  media_score_stars_inner.html
src/templates/partials/musicbrainz/: musicbrainz_suggestions.html
src/templates/partials/navigation/: filters_drawer.html  sidebar_nav.html  view_mode_toggle.html
src/templates/partials/openlibrary/: openlibrary_suggestions.html
src/templates/partials/saved_views/: save_view_modal.html  saved_views_list.html
src/templates/partials/tags/: tag_chip.html  tag_suggestions.html
src/templates/partials/tmdb/: tmdb_suggestions.html
src/templates/registration/: login.html
src/tests/: __init__.py  conftest.py
src/tests/accounts/: __init__.py  test_forms.py  test_views.py
src/tests/core/: test_context_processors.py  test_forms.py  test_googlebooks.py  test_htmx_validation.py  test_management_commands.py  test_mediaform_htmx.py  test_models.py  test_musicbrainz.py  test_template_validator_hint.py  test_tmdb.py  test_utils.py  test_views.py
src/theme/static_src/: package-lock.json  package.json
src/theme/static_src/src/: styles.css
static/css/: base.css
static/js/: base.js
templates/: _base.html  about.html  detail_base.html  home.html  signup.html
templates/account/: login.html  logout.html  password_change.html  password_reset.html  signup.html
templates/account/email/: email_confirmation_message.txt
templates/registration/: login.html
templates/tracking/: activitycreate.html
tracking/: models.py  urls.py  views.py
tracking/migrations/: 0001_initial.py  0002_auto_20200829_1601.py  0003_auto_20200830_0659.py  0004_auto_20200830_0700.py  0005_auto_20200830_0706.py
users/: admin.py  forms.py  tests.py  views.py
users/migrations/: 0001_initial.py
